<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
        android:layout_width="204dp"
        android:layout_height="33dp"
        android:gravity="center"
        android:fontFamily="sans-serif-black"
        android:text="@string/tacoTradicional"
        android:textSize="25dp" />
    <TextView
        android:layout_width="100dp"
        android:layout_height="33dp"
        android:gravity="center"
        android:fontFamily="sans-serif-black"
        android:text="@string/cantidad"
        android:textSize="25dp" />
    <TextView
        android:layout_width="100dp"
        android:layout_height="33dp"
        android:gravity="center"
        android:fontFamily="sans-serif-black"
        android:text="@string/precioProducto"
        android:textSize="25dp" />

</LinearLayout>