<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:backgroundTint="@color/fondo"
    tools:context=".menuprincipal">

    <ImageView
        android:layout_width="240dp"
        android:layout_height="180dp"
        android:layout_gravity="center"
        android:src="@drawable/logotaqueria" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Nuestras categorías"
        android:textAllCaps="true"
        android:layout_gravity="center_horizontal"
        android:textSize="20sp"
        android:textColor="@color/colorBoton"
        android:layout_marginTop="20dp"
        />
    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="1"
        android:layout_marginTop="20dp"
        android:paddingHorizontal="100dp">

        <Button
            android:id="@+id/button_tacos"
            android:text="@string/tacos"
            android:backgroundTint="@color/colorBoton"
            android:src="@drawable/tacos"
            android:paddingHorizontal="20dp"
            android:layout_marginRight="2dp"
            android:layout_gravity="fill_horizontal"
            android:layout_columnWeight="1"

            android:textSize="15dp"
            android:paddingVertical="20dp"
        />
        <Button
            android:id="@+id/button_antojitos"
            android:text="@string/antojitos"
            android:backgroundTint="@color/colorBoton"
            android:src="@drawable/tacosvariedad"
            android:paddingHorizontal="20dp"
            android:layout_marginRight="2dp"
            android:layout_gravity="fill_horizontal"

            android:layout_columnWeight="1"
            android:textSize="15dp"
            android:paddingVertical="20dp"
            />
        <Button
            android:id="@+id/button_especialidades"
            android:text="@string/especialidades"
            android:backgroundTint="@color/colorBoton"
            android:src="@drawable/tacosvariedad"
            android:paddingHorizontal="20dp"
            android:layout_marginRight="2dp"
            android:layout_gravity="fill_horizontal"
            android:layout_columnWeight="1"
            android:textSize="15dp"
            android:paddingVertical="20dp"
            />
        <Button
            android:id="@+id/button_caldos"
            android:text="@string/caldos"
            android:backgroundTint="@color/colorBoton"
            android:src="@drawable/caldores"
            android:paddingHorizontal="20dp"
            android:layout_marginRight="2dp"
            android:layout_gravity="fill_horizontal"
            android:layout_columnWeight="1"
            android:textSize="15dp"
            android:paddingVertical="20dp"
            />
        <Button
            android:id="@+id/button_combinations"
            android:text="@string/combinations"
            android:backgroundTint="@color/colorBoton"
            android:src="@drawable/dosamigos"
            android:paddingHorizontal="20dp"
            android:layout_marginRight="2dp"
            android:layout_gravity="fill_horizontal"
            android:layout_columnWeight="1"
            android:textSize="15dp"
            android:paddingVertical="20dp"
            />

        <Button
            android:id="@+id/button_tortas"
            android:text="@string/tortas"
            android:backgroundTint="@color/colorBoton"
            android:src="@drawable/mexicantorta"
            android:paddingHorizontal="20dp"
            android:layout_marginRight="2dp"
            android:layout_gravity="fill_horizontal"
            android:layout_columnWeight="1"
            android:textSize="15dp"
            android:paddingVertical="20dp"
            />
        <Button
            android:id="@+id/button_sopas"
            android:text="@string/sopas"
            android:backgroundTint="@color/colorBoton"
            android:src="@drawable/pozole"
            android:paddingHorizontal="20dp"
            android:layout_marginRight="2dp"
            android:layout_gravity="fill_horizontal"
            android:layout_columnWeight="1"
            android:textSize="15dp"
            android:paddingVertical="20dp"
            />

        <Button
            android:id="@+id/button_sideorders"
            android:text="@string/sideorders"
            android:backgroundTint="@color/colorBoton"
            android:src="@drawable/tacosvariedad"
            android:paddingHorizontal="20dp"
            android:layout_marginRight="2dp"
            android:layout_gravity="fill_horizontal"
            android:layout_columnWeight="1"
            android:textSize="15dp"
            android:paddingVertical="20dp"
            />
        <Button
            android:id="@+id/button_bebidas"
            android:text="@string/bebidas"
            android:backgroundTint="@color/colorBoton"
            android:src="@drawable/tacosvariedad"
            android:paddingHorizontal="20dp"
            android:layout_marginRight="2dp"
            android:layout_gravity="fill_horizontal"
            android:layout_columnWeight="1"
            android:textSize="15dp"
            android:paddingVertical="20dp"
            />
    </GridLayout>

</LinearLayout>